[gd_scene load_steps=3 format=2]

[ext_resource path="res://AsteroidsSpawner.gd" type="Script" id=1]
[ext_resource path="res://resources/warning_asteroids.wav" type="AudioStream" id=2]

[node name="AsteroidsSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2( 103, 3 )

[node name="Position2D" type="Position2D" parent="SpawnPoints"]
position = Vector2( 90, -13 )

[node name="Position2D6" type="Position2D" parent="SpawnPoints"]
position = Vector2( 58, -13 )

[node name="Position2D7" type="Position2D" parent="SpawnPoints"]
position = Vector2( -41, -13 )

[node name="Position2D8" type="Position2D" parent="SpawnPoints"]
position = Vector2( 10, -13 )

[node name="Position2D2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 154, -13 )

[node name="Position2D3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 217, -13 )

[node name="Position2D4" type="Position2D" parent="SpawnPoints"]
position = Vector2( 186, -13 )

[node name="Position2D5" type="Position2D" parent="SpawnPoints"]
position = Vector2( 122, -13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Next_wave" type="Timer" parent="."]
one_shot = true

[node name="Warning_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Next_wave" to="." method="_on_Next_wave_timeout"]
